🐛 FIX: City Details Fallback Container Jumping Issue

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -373,7 +373,7 @@ input, select {
 
 .fallback-background-color {
   /* background-color: rgba(169, 169, 169, 0.11); */
-  padding: 15px;
+  /* padding: 15px; */
   /* margin-bottom: 20px; */
   border-radius: 5px;
 }
